Update project: improve visualization and add project history (2025/11/15)
- Update README.md with project history section
- Improve fk_click_show_gif.ipynb: optimize GIF display size (128x128), remove color bar, fix padding
- Add GIF folder synchronization scripts and documentation
- Add data export files (CSV, JSON) for external use
- Clean up project structure

--- a/fk_click_show_gif.ipynb
+++ b/fk_click_show_gif.ipynb
@@ -11,8 +11,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -82,18 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create GIF preview widgets\n",
+    "# Create GIF preview widgets (128x128 to match actual GIF size)\n",
     "output_box = widgets.Output(layout=widgets.Layout(\n",
-    "    width='200px', height='200px', overflow='hidden', \n",
-    "    border='1px solid #ccc', flex='0 0 auto'\n",
+    "    width='128px', height='128px', overflow='hidden', \n",
+    "    border='1px solid #ccc', flex='0 0 auto', \n",
+    "    padding='0px', margin='0px'\n",
     "))\n",
     "\n",
     "filename_label = widgets.HTML(\n",
-    "    value='<div style=\"width:200px; word-wrap:break-word; font-size:12px; text-align:center;\">'\n",
+    "    value='<div style=\"width:128px; word-wrap:break-word; font-size:12px; text-align:center;\">'\n",
     "          'Click a point to preview</div>'\n",
     ")\n",
     "\n",
@@ -111,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03a23985963042d6bcc068717008f36f",
+       "model_id": "92452a7e32f344b7991474fbe1a9991e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,8 +139,7 @@
     "# Scatter plot with spatial variation as color\n",
     "sc = ax.scatter(k_values, f_values, c=variations, s=24, alpha=0.7, \n",
     "                picker=5, cmap='viridis')\n",
-    "cbar = plt.colorbar(sc, ax=ax)\n",
-    "cbar.set_label('Spatial Variation (last frame)', rotation=270, labelpad=20)\n",
+    "# Color bar removed\n",
     "\n",
     "ax.set_xlabel('k')\n",
     "ax.set_ylabel('f')\n",
@@ -215,14 +222,20 @@
     "    # Update filename label\n",
     "    filename = os.path.basename(gif_path)\n",
     "    filename_label.value = (\n",
-    "        f'<div style=\"width:200px; word-wrap:break-word; font-size:12px; text-align:center;\">'\n",
+    "        f'<div style=\"width:128px; word-wrap:break-word; font-size:12px; text-align:center;\">'\n",
     "        f'{filename}</div>'\n",
     "    )\n",
     "    \n",
-    "    # Display GIF\n",
+    "    # Display GIF at actual size (128x128) with no padding\n",
     "    with output_box:\n",
     "        clear_output(wait=True)\n",
-    "        display(Image(filename=gif_path, embed=True, width=200))\n",
+    "        # Read GIF file and encode as base64 to avoid path issues\n",
+    "        import base64\n",
+    "        with open(gif_path, 'rb') as f:\n",
+    "            gif_data = base64.b64encode(f.read()).decode('utf-8')\n",
+    "        # Use HTML img tag with inline style to remove all padding/margin\n",
+    "        from IPython.display import HTML\n",
+    "        display(HTML(f'<img src=\"data:image/gif;base64,{gif_data}\" width=\"128\" height=\"128\" style=\"display:block; margin:0; padding:0; border:none; line-height:0;\" />'))\n",
     "\n",
     "# Configure canvas and display\n",
     "fig.canvas.layout = widgets.Layout(\n",
@@ -244,15 +257,6 @@
     "display(container)\n",
     "\n",
     "cid = fig.canvas.mpl_connect('pick_event', on_pick)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   }
  ],
