整理: 可視化ファイルをvisualizationフォルダに移動、Streamlit関連ファイルを削除
- 可視化関連ファイル（fk_analysis.py、ノートブック、データファイル）をvisualization/フォルダに整理
- Streamlit関連ファイル（app_streamlit.py、STREAMLIT_LARGE_FILES.md、requirements_streamlit.txt）を削除
- スクリプトファイルをscripts/フォルダに整理
- DEPLOYMENT.mdを更新（Streamlit関連記述を削除、GitHub Pages対応）
- DEVELOPMENT_LOG.mdの日付を更新、参考文献を追加

--- a/visualization/fk_click_show_gif.ipynb
+++ b/visualization/fk_click_show_gif.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
     "# Load data (uses cache if available, otherwise processes all GIF files)\n",
     "# First run will take several minutes to process all GIFs\n",
     "# Subsequent runs will load from cache instantly\n",
-    "data = fk_analysis.load_or_process_data(gif_dir='gif', use_cache=True, verbose=True)\n",
+    "data = fk_analysis.load_or_process_data(gif_dir='../gif', use_cache=True, verbose=True)\n",
     "\n",
     "f_values = data['f_values']\n",
     "k_values = data['k_values']\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,13 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92452a7e32f344b7991474fbe1a9991e",
+       "model_id": "df4b450c7519445080f1ea7fdfbd81ad",
        "version_major": 2,
        "version_minor": 0
       },
